# AndroidNdkDemo

./: README.md  settings.gradle
MultiNdkDemo/: CMakeLists.txt  build.gradle
MultiNdkDemo/src/main/cpp/one/: CMakeLists.txt  one.cpp
MultiNdkDemo/src/main/cpp/three/: CMakeLists.txt  three.cpp
MultiNdkDemo/src/main/cpp/two/: CMakeLists.txt  two.cpp
MultiNdkDemo/src/main/java/com/xinghai/androidndkdemo/: MainActivity.java
MultiNdkDemo/src/main/java/com/xinghai/multi/: JniUtil.java
MultiNdkDemo/src/main/res/layout/: activity_main.xml
MultiNdkDemo/src/main/res/values/: strings.xml
MultiNdkDemo/src/test/java/com/xinghai/androidndkdemo/: ExampleUnitTest.java
NdkThirdCalledDemo/: CMakeLists.txt  build.gradle
NdkThirdCalledDemo/src/androidTest/java/com/xinghai/androidndkdemo/: ExampleInstrumentedTest.java
NdkThirdCalledDemo/src/main/cpp/: hello-libs.cpp
NdkThirdCalledDemo/src/main/java/com/xinghai/androidndkdemo/: MainActivity.java
NdkThirdCalledDemo/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xinghai/androidndkdemo/: MainActivity.java
app/src/main/res/values/: strings.xml
distribution/three/include/: three.h
gradle/wrapper/: gradle-wrapper.properties
